--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            # Your code her
+            # Your code here
             exit 1
 
   revert-migrations:
@@ -61,7 +61,9 @@ jobs:
       - run:
           name: Back-end build
           command: |
-             # Your code here
+              cd frontend
+              npm install
+              npm run build
              exit 1
       - save_cache:
           paths: [backend/node_modules]
