--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
       - run:
           name: Back-end build
           command: |
-              cd frontend
+              cd backend
               npm install
               npm run build
               exit 1
@@ -72,18 +72,26 @@ jobs:
   test-frontend:
     docker:
       # Docker image here
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       # Restore from cache
       # Your job code here
+      cd frontend
+      npm install
+      npm run test
                 
   test-backend:
     docker:
       # Docker image here
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       # Restore from cache
       # Your job code here
+      cd backend
+      npm install
+      npm run build
             
   scan-frontend:
     docker:
