--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,18 +96,28 @@ jobs:
   scan-frontend:
     docker:
       # Docker image here
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       # Restore from cache
       # Your job code here
+      cd frontend
+      npm install
+      # npm install oauth-sign@^0.9.0
+      npm audit --audit-level=critical
 
   scan-backend:
     docker:
       # Docker image here
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       # Restore from cache
       # Your job code here
+      cd frontend
+      npm install
+      # npm install oauth-sign@^0.9.0
+      npm audit --audit-level=critical
 
   deploy-infrastructure:
     docker:
