--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,52 +71,42 @@ jobs:
 
   test-frontend:
     docker:
-      # Docker image here
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
-      # Restore from cache
-      # Your job code here
+      - checkout
+      - restore_cache
       cd frontend
       npm install
       npm run test
                 
   test-backend:
     docker:
-      # Docker image here
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
-      # Restore from cache
-      # Your job code here
+      - checkout
+      - restore_cache
       cd backend
       npm install
       npm run build
             
   scan-frontend:
     docker:
-      # Docker image here
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
-      # Restore from cache
-      # Your job code here
+      - checkout
+      - restore_cache
       cd frontend
       npm install
-      # npm install oauth-sign@^0.9.0
       npm audit --audit-level=critical
 
   scan-backend:
     docker:
-      # Docker image here
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
-      # Restore from cache
-      # Your job code here
+      - checkout
+      - restore_cache
       cd frontend
       npm install
-      # npm install oauth-sign@^0.9.0
       npm audit --audit-level=critical
 
   deploy-infrastructure:
